--- a/.editorconfig
+++ b/.editorconfig
@@ -1,7 +1,18 @@
-# This file is for unifying the coding style for different editors and IDEs.
+################################################################################
+#
+# \file .editorconfig
+# \author Akshay Krishna Upendran
+# \brief # Custom options file for editorconfig (https://editorconfig.org/)
+#        # usage:
+#              Plugin -> Inbuilt in IDEs
+#
+# Some documentation of the options is provided here for convenience. For full
+# options documentation, go to
+# https://editorconfig-specification.readthedocs.io/en/latest/
+#
 # Read more @ https://editorconfig-specification.readthedocs.io/en/latest/
-
 # For Plugins visit https://editorconfig.org/
+################################################################################
 
 ; All Property Names and Property Values are case insensitive
 ; Please note that if indent_style=tab then tab_width=indent_size
@@ -23,3 +34,15 @@ charset = utf-8
 
 ; If Sub root files exist make sure to add unset to these variablles
 ; Both # and ; are commments
+
+################################################################################
+############################## REVISION HISTORY ################################
+################################################################################
+# 1.
+# Date:   02-Oct-2019
+# Author: Akshay Krishna akshayupendran
+# Create Editor Config Settings for Linux Virtual Box
+#
+# 2.
+#
+################################################################################
